Finito esercizio 3
Sistemate cartelle e link tra obsidian e file